[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://game_env.tres" type="Environment" id=2]
[ext_resource path="res://scripts/FPSLabel.gd" type="Script" id=3]
[ext_resource path="res://scripts/LevelGenMapUI.gd" type="Script" id=4]
[ext_resource path="res://scripts/EnemySpawner.gd" type="Script" id=5]
[ext_resource path="res://scripts/Navigation.gd" type="Script" id=6]
[ext_resource path="res://scripts/Player.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]

radius = 0.6
height = 0.5

[node name="World" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]

environment = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 0.106348, 0.994329, 0, -0.994329, 0.106348, 0, 23.2781, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 0.5
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="GUI" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="FPSLabel" type="Label" parent="GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1457.0
margin_top = 4.0
margin_right = 1573.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "FPS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="LocationLabel" type="Label" parent="GUI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1458.0
margin_top = 24.0
margin_right = 1574.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Location"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GameStatusLabel" type="Label" parent="GUI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1457.0
margin_top = 47.0
margin_right = 1576.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Generating Level"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LevelGenMapUI" type="TextureRect" parent="GUI" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 3
script = ExtResource( 4 )
_sections_unfolded = [ "Margin" ]

[node name="GenerateLevelBtn" type="Button" parent="GUI" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1456.0
margin_top = 72.0
margin_right = 1561.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Generate"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="TargetLabel" type="Label" parent="GUI" index="5"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "+"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="Label" type="Label" parent="GUI" index="6"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -92.5
margin_top = 20.0
margin_right = 92.5
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Press `Esc` To Free Mouse"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="EnemySpawner" type="Node" parent="." index="3"]

script = ExtResource( 5 )

[node name="DungeonMap" type="DungeonMap" parent="." index="4"]

material/floor = null
material/wall = null
material/water = null
_sections_unfolded = [ "material" ]

[node name="Navigation" type="Navigation" parent="." index="5"]

up_vector = Vector3( 0, 1, 0 )
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Player" type="KinematicBody" parent="." index="6"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6247, 0.996533, -10.5223 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 3
collision_mask = 3
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 7 )
_sections_unfolded = [ "Axis Lock", "Collision", "Transform", "collision" ]

[node name="CapsuleShape" type="CollisionShape" parent="Player" index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Head" type="Spatial" parent="Player" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="Player/Head" index="0"]

keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 500.0
_sections_unfolded = [ "Transform" ]


